--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'Almarai', sans-serif;
-    background-color:#d3d3d3;
+    background-color: #f4f4f9;
     display: flex;
     justify-content: center;
     align-items: center;
